--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -6,6 +6,7 @@
         "Overview": "Fine-Tuned a LLaVA model to answer multiple choice medical questions. Hosted at medllava.scottspicer.com",
         "Contributions": null,
         "VisualPath": null,
+        "VideoPath": null,
         "Tools": ["Python", "Hugging Face", "PyTorch"],
         "ToolsVisualPath": ["icons/python-240.png", "icons/hugging-face-240.png","icons/pytorch-240.png"],
         "OtherTools" : ["Angular", "AWS", "Numpy", "Google Colab", "Kaggle Notebooks"]
@@ -16,6 +17,7 @@
         "Overview": "Worked with 3 people to debias the UCF-101 action-recognition video dataset.",
         "Contributions": ["Reviewed state-of-the-art techniques for debiasing video datasets and shaped the team's methodology.", "Wrote a Python script that detects scene changes and automatically splits videos into granular clips for analysis.", "Integrated an activity-verification model to confirm that each new clip still depicts the intended action class.", "Performed manual QA on clips to validate action labels and bias tags, ensuring high data quality."],
         "VisualPath": "assets/project/bias-101-workflow.png",
+        "VideoPath": null,
         "Tools": ["Python", "Hugging Face", "NumPy", "PyTorch"],
         "ToolsVisualPath": ["icons/python-240.png", "icons/hugging-face-240.png", "icons/numpy-240.png", "icons/pytorch-240.png"],
         "OtherTools" : ["Google Colab", "OpenCV", "MoviePy"]
@@ -26,6 +28,7 @@
         "Overview": "Built a pipeline of AI models to find an fill gaps in unit testing.",
         "Contributions": null,
         "VisualPath": null,
+        "VideoPath": null,
         "Tools": ["Python", "Hugging Face", "NumPy", "PyTorch"],
         "ToolsVisualPath": ["icons/python-240.png", "icons/hugging-face-240.png", "icons/numpy-240.png", "icons/pytorch-240.png"],
         "OtherTools" : ["Google Colab"]
@@ -36,6 +39,7 @@
         "Overview": "Worked with 4 people to build a smart home app that allows users to control all their smart devices and securely share access with guests.",
         "Contributions": ["Led AWS cloud engineering efforts.", "Tested, debugged, and replaced deprecated Lambda functions and REST APIs.", "Designed and implemented a WebSocket solution to optimize real-time data flow.", "Added new features, including guest access requests and real-time log updates."],
         "VisualPath": "assets/project/Misu8min.mp4",
+        "VideoPath": null,
         "Tools": ["AWS", "React"],
         "ToolsVisualPath": ["icons/aws-256.png", "icons/react-160.png"],
         "OtherTools" : ["Home Assistant", "Raspberry Pi", "Node.JS", "Expo", "Jira"]
@@ -46,6 +50,7 @@
         "Overview": "A study with 4 others that compared AI-based and traditional video denoisers on 4 noise types across 3 metrics.",
         "Contributions": ["Applied four distinct noise types to over 13,000 videos, each ranging from 3 to 7 minutes in length.", "Researched and optimized hyperparameter settings for the Fast Non-Local Means function through extensive testing.", "Analyzed denoised videos, generated performance metrics and visualizations, and presented findings effectively."],
         "VisualPath": null,
+        "VideoPath": null,
         "Tools": ["Python", "Hugging Face", "NumPy", "PyTorch"],
         "ToolsVisualPath": ["icons/python-240.png", "icons/numpy-240.png", "icons/pytorch-240.png"],
         "OtherTools" : ["OpenCV", "Slurm"]
@@ -56,6 +61,7 @@
         "Overview": "Created an FT-Transformer to classify the year of the song.",
         "Contributions": null,
         "VisualPath": null,
+        "VideoPath": null,
         "Tools": ["Python", "NumPy", "PyTorch"],
         "ToolsVisualPath": ["icons/python-240.png", "icons/numpy-240.png", "icons/pytorch-240.png"],
         "OtherTools" : ["Scikit-Learn", "Slurm"]
@@ -65,17 +71,19 @@
         "Description": "Summer 2024 Solo project. One day in the gym I realized that there had to be a better way to track my workouts. After looking at a few that didn't have what I wanted, I decided to build my own. This way, I could easily have log progressive overload from day to day while having the flexibility to adapt quickly and seemlessly on the fly.",
         "Overview": "Created a fitness tracking mobile app to log workouts and track results.",
         "Contributions": null,
-        "VisualPath": "assets/project/FitnessAppDemo.mp4",
+        "VisualPath": null, 
+        "VideoPath": "assets/project/FitnessAppDemo.mp4",
         "Tools": ["React", "AWS"],
         "ToolsVisualPath": ["icons/react-160.png", "icons/aws-256.png"],
         "OtherTools" : ["Node.JS", "Expo"]
     },
-        {
+    {
         "Name": "Online Chess",
         "Description": "This project was part of my Processes for Object-Oriented Software Development class (COP 4331C). Our team developed an online multiplayer chess application that allows users to Manage accounts, add and interact with friends, track elo scores, and play chess matches in real-time. ",
         "Overview": "Worked with 4 people to create a windows desktop app to play chess online with friends.",
         "Contributions": ["Designed and implemented the game engine and its accompanying API for the chess game.", "Conducted extensive testing of game engine logic to ensure compliance with official chess rules.", "Set up the AWS infrastructure, including an EC2 instance, to enable WebSocket connections for real-time gameplay."],
         "VisualPath": null,
+        "VideoPath": null,
         "Tools": [".NET", "C#"],
         "ToolsVisualPath": ["icons/net-framework-240.png", "icons/c-sharp-logo-2-240.png"],
         "OtherTools" : ["AWS"]
@@ -85,7 +93,8 @@
         "Description": "This was the first application I made with a front-end and a back-end that communicate with each other. I completed it in the summer of 2023 with no clue how to create a front-end, much less how to get it create an API to communicate with the backend. The 2 frameworks Flask and bootstrap were both wonderful tools and helped me get closer to understanding how real software works.",
         "Overview": "My first full application I made, it was a wordle clone web app.",
         "Contributions": null,
-        "VisualPath": "assets/project/WordleDemoVid.mp4",
+        "VisualPath": null,  
+        "VideoPath": "assets/project/WordleDemoVid.mp4",
         "Tools": ["Python", "HTML/CSS"],
         "ToolsVisualPath": ["icons/python-240.png", "icons/html5-240.png"],
         "OtherTools" : ["Flask", "Bootstrap"]
